:crocodile: more dino data

--- a/top100.md
+++ b/top100.md
@@ -1,6 +1,7 @@
 # Top 100 dinosaurs in Wikipedia
 
-Rank|Dinosaur|Views|Cloned in Jurassic Park series|Triassic|Jurassic|Cretaceous
+Rank|Dinosaur|Views|Cloned in Jurassic Park series|Triassic|Jurassic|Cretaceous|
+----|----|----|----|----|----|----| 
 0|[Tyrannosaurus](https://en.wikipedia.org/wiki/Tyrannosaurus)|3958.013698630137|True|False|False|True
 1|[Velociraptor](https://en.wikipedia.org/wiki/Velociraptor)|2909.553424657535|True|False|False|True
 2|[Spinosaurus](https://en.wikipedia.org/wiki/Spinosaurus)|1761.5945205479452|True|False|False|True
